--- a/index.html
+++ b/index.html
@@ -1,24 +1,11 @@
-<html ng-app = "AntiAddicter">
-	<header>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.22/require.js"></script>
-		
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.22/require.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular-route.min.js"></script>
+<html>
+<header>
+    <script data-main="main" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.22/require.js"></script>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+</header>
 
+<body>
+    <div ng-view></div>
+</body>
 
-
-
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-
-
-		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-		<script src="loginControl.js"></script>
-		<script src="js/PlayerData.js"></script>
-	</header>
-
-
-	<body >
-		<div ng-view></div>
-	</body>
 </html>
