star graph debugged

--- a/stats.html
+++ b/stats.html
@@ -1,5 +1,7 @@
 <div>
-  <p></p>
+  </br>
+  <p>{{username}}</p>
+  </br>
   <div>
 
     <canvas tc-chartjs-radar chart-options="options" chart-data="data" auto-legend></canvas>
