login page typewriter/hacker style added

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 <header>
     <script data-main="main" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.22/require.js"></script>
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="lib/hacker.css" rel="stylesheet">
 </header>
 
 <body>
