star graph legend fixed; style changed

--- a/stats.html
+++ b/stats.html
@@ -1,10 +1,10 @@
 <div>
-</br>
-<p>{{username}}</p>
-</br>
-<div>
+	</br>
+	<p style= "text-align: center">{{username}}</p>
+	</br>
+	<div>
 
-	<canvas tc-chartjs-radar chart-options="options" chart-data="data" auto-legend></canvas>
+		<canvas tc-chartjs-radar chart-options="options" chart-data="data" auto-legend></canvas>
 
-</div>
+	</div>
 </div>
