--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <header>
     <script data-main="main" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.22/require.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--link href="lib/hacker.css" rel="stylesheet"-->
+    
+	<link href="lib/hacker.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<link href="CSS/stats.css" rel="stylesheet">
 </header>
 
 <body>
