--- a/stats.html
+++ b/stats.html
@@ -1,23 +1,23 @@
 <div class = "container">
 	<div class="row">
-		<div class="col-sm-6">
+		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 			<div class="row">
-				<div class="col-sm-3">
+				<div class="col-xs-4 col-sm-4 col-md-2 col-lg-2">
 					<img border="0" alt="ProfileIcon" src="http://ddragon.leagueoflegends.com/cdn/6.7.1/img/profileicon/{{playerData.ProfileIcon}}.png" width="100" height="100" />
 				</div>
 
-				<div class="col-sm-6">
-					<h2 class="rank">{{username}}</h2>
-					<h2 class="rank">{{playerData.Tier}} {{playerData.Division}}</h2>
+				<div class="col-xs-8 col-sm-8 col-md-4 col-lg-4">
+					<p class="rank">{{username}}</p>
+					<p class="rank">{{playerData.Tier}} {{playerData.Division}}</p>
 				</div>
 			</div>
-			<canvas tc-chartjs-radar chart-options="options" chart-data="data" auto-legend/>
+			<canvas id="analysisGraph" tc-chartjs-radar chart-options="options" chart-data="data" auto-legend/>
 		</div>
-		<div class="col-sm-6">
+		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 			<h1> Detailed Analysis</h1>
 			<p>Data from recent {{playerData.gamesAnalyzed}} matches</p>
 			<div class="row">
-				<div class="col-sm-4">
+				<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
 					<p>Positions plays: </p>
 					<p>Top: {{playerData.TopPlayed}}</p>
 					<p>MID: {{playerData.MidPlayed}}</p>
@@ -25,11 +25,11 @@
 					<p>ADC: {{playerData.AdcPlayed}}</p>
 					<p>SUPPORT: {{playerData.SupportPlayed}}</p>
 				</div>
-				<div class="col-sm-8">
+				<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
 					<canvas tc-chartjs-radar chart-options="options" chart-data="versatility"/>
 				</div>
 			</div>
-			<table class="table">
+			<table class="table table-condensed" >
 				<thead>
 					<tr>
 						<th/>
@@ -131,9 +131,9 @@
 					</tr>
 					<tr>
 						<td>KILL CONTRIBUTION</td>
-						<td>{{playerData.KillContribution_Raw}}</td>
-						<td>{{playerData.KillContribution_ThisTier}}</td>
-						<td>{{playerData.KillContribution_NextTier}}</td>
+						<td>{{playerData.KillContribution_Raw}}%</td>
+						<td>{{playerData.KillContribution_ThisTier}}%</td>
+						<td>{{playerData.KillContribution_NextTier}}%</td>
 					</tr>
 				</tbody>
 			</table>
