style changed briefly; original names can be shown

--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 		
 		<form ng-submit = "getLOLInfo()" method="POST" ng-show="message==''">
 			
-			<span>$ </span><input type="text" name="Account_LOL" placeholder="" ng-model="username" style="background:none"></br>
+			<span>$ </span><input id="nameBox" type="text" name="Account_LOL" placeholder="" ng-model="username" style="background:none" autofocus></br>
 			
 			<input type="submit" value="Submit" style="display:none">
 		</form>
