--- a/stats.html
+++ b/stats.html
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 			<div class="row">
-				<div class="col-xs-4 col-sm-4 col-md-2 col-lg-2">
+				<div class="col-xs-3 col-sm-3 col-md-2 col-lg-2">
 					<img border="0" alt="ProfileIcon" src="http://ddragon.leagueoflegends.com/cdn/6.7.1/img/profileicon/{{playerData.ProfileIcon}}.png" width="100" height="100" />
 				</div>
 
@@ -11,7 +11,11 @@
 					<p class="rank">{{playerData.Tier}} {{playerData.Division}}</p>
 				</div>
 			</div>
-			<canvas id="analysisGraph" tc-chartjs-radar chart-options="options" chart-data="data" auto-legend/>
+			
+			<div class="mainGraph">
+				<canvas id="analysisGraph" tc-chartjs-radar chart-options="options" chart-data="data" auto-legend/>
+			</div>
+			
 		</div>
 		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 			<h1> Detailed Analysis</h1>
@@ -25,7 +29,7 @@
 					<p>ADC: {{playerData.AdcPlayed}}</p>
 					<p>SUPPORT: {{playerData.SupportPlayed}}</p>
 				</div>
-				<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+				<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8"> 
 					<canvas tc-chartjs-radar chart-options="options" chart-data="versatility"/>
 				</div>
 			</div>
