--- a/stats.html
+++ b/stats.html
@@ -37,7 +37,7 @@
 				<thead>
 					<tr>
 						<th/>
-						<th/>
+						<th>YOU</th>
 						<th>{{playerData.Tier}}</th>
 						<th>{{playerData.NextTier}}</th>
 						<th>Assessment</th>
