--- a/login.html
+++ b/login.html
@@ -2,14 +2,14 @@
 		<span style="white-space:pre-wrap;">{{typein}}</span>
 		
 		
-		<!--form ng-submit = "getLOLInfo()" method="POST" ng-show="message==''">
+		<form ng-submit = "getLOLInfo()" method="POST" ng-show="message==''">
 			
 			<span>$ </span><input id="nameBox" type="text" name="Account_LOL" placeholder="" ng-model="username" style="background:none" autofocus></br>
 			
 			<input type="submit" value="Submit" style="display:none">
-		</form-->
+		</form>
 		
-		<div><p>Updating database...Website will be back tomorrow(4/30)</p></div>
+		<!--div><p>Updating database...Website will be back tomorrow(4/30)</p></div-->
 		
 		<div ><p style="white-space:pre-wrap;">{{message}}</p></div>
 		
